--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.7</version>
     </dependency>
+<!--javaSE 校验工具-->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.5.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
