--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,14 @@ spring.resources.add-mappings=false
 #配置springboot对redis的依赖
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+# 对应的redis库序号
 spring.redis.database=10
 #spring.redis.password=415669945tjw
 
 #设置jedis连接池
 spring.redis.jedis.pool.max-active=50
 spring.redis.jedis.pool.min-idle=20
+
+#rocketMQ设置
+#mq.nameserver.addr=115.28.67.199:9876
+#mq.topicname=TopicTest
