--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.redis.jedis.pool.max-active=50
 spring.redis.jedis.pool.min-idle=20
 
 #rocketMQ…Ë÷√
-#mq.nameserver.addr=115.28.67.199:9876
-#mq.topicname=TopicTest
+mq.nameserver.addr=115.28.67.199:9876
+mq.topicname=TopicTest
